<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat">
    <data>
        <variable
            name="ProductViewModel"
            type="com.crisav2.productbasket.views.ft10.viewmodel.AddProductViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/product_hint"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent"
                android:text="@={ProductViewModel.typeProduct}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_container"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/brand_hint"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={ProductViewModel.brandProduct}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brand_container"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/amount_hint"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="@{ProductViewModel.maxLengthAmount}"
                android:text="@={ProductViewModel.amountProductString}"
                android:textAlignment="viewEnd" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_container"
            android:layout_marginTop="@dimen/margin_top_form"
            android:hint="@string/price_hint"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@{ProductViewModel.maxLengthPrice}"
                android:text="@={ProductViewModel.priceUnitString}"
                android:textAlignment="viewEnd" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/discount_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_container"
            android:layout_marginTop="@dimen/margin_top_form"
            android:checked="@={ProductViewModel.hasDiscount}"
            android:text="@string/discount_hint"
            android:buttonTint="@color/primary_color"
            style="@style/LabelFormSwitch"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/complete_discount_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/discount_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RadioGroup
                android:id="@+id/discount_type_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <RadioButton
                    android:id="@+id/discount_type_1"
                    style="@style/LabelFormSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="@={ProductViewModel.discountP}"
                    android:text="@string/discount_1_hint" />
                <RadioButton
                    android:id="@+id/discount_type_2"
                    style="@style/LabelFormSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="@={ProductViewModel.discountC}"
                    android:text="@string/discount_2_hint" />
            </RadioGroup>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_percentage_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/discount_type_radio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/percentage_discount_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/label_percentage_symbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:boxStrokeColor="@color/primary_color"
                    app:hintTextColor="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/percentage_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="@{ProductViewModel.maxLengthDiscount}"
                        android:text="@={ProductViewModel.percentageString}"
                        android:textAlignment="viewEnd" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/label_percentage_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/percentage_discount_container"
                    app:layout_constraintTop_toTopOf="@id/percentage_discount_container"
                    app:layout_constraintBottom_toBottomOf="@id/percentage_discount_container"
                    android:text="@string/percentage_symbol"
                    style="@style/LabelBigSymbol"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_amount_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/discount_type_radio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/percentage_amount_1_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/label_times_symbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:boxStrokeColor="@color/primary_color"
                    app:hintTextColor="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount_1_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="@{ProductViewModel.maxLengthAmountDiscount}"
                        android:text="@={ProductViewModel.amount1String}"
                        android:textAlignment="viewEnd" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/label_times_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/percentage_amount_2_container"
                    app:layout_constraintStart_toEndOf="@id/percentage_amount_1_container"
                    app:layout_constraintTop_toTopOf="@id/percentage_amount_1_container"
                    app:layout_constraintBottom_toBottomOf="@id/percentage_amount_1_container"
                    android:text="@string/times_symbol"
                    style="@style/LabelBigSymbol"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/percentage_amount_2_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_times_symbol"
                    app:layout_constraintTop_toTopOf="parent"
                    app:boxStrokeColor="@color/primary_color"
                    app:hintTextColor="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount_2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="@{ProductViewModel.maxLengthAmountDiscount}"
                        android:text="@={ProductViewModel.amount2String}"
                        android:textAlignment="viewEnd" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_to_pay_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_product"
            android:hint="@string/total_product_label"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_to_pay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:focusable="false"
                android:clickable="false"
                android:text="@={ProductViewModel.total}"
                android:textAlignment="viewEnd" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/add_product_label"
            android:enabled="@{ProductViewModel.formValid}"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:id="@+id/cancel_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cancel_product_label"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>